apps/linkding/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - linkding.k8s-demo.de
    secretName: linkding-tls
  rules:
  - host: linkding.k8s-demo.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
